# cppbessot

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  cppbessot.md  package-lock.json  package.json  system-spec.md
cmake/: CppBeSSOT.cmake  dbActionCommon.cmake  dbActionCreateFrom.cmake  dbActionMigrate.cmake  dbActionShared.cmake  dbDependencyCheck.cmake  dbGenCpp.cmake  dbGenMigrations.cmake  dbGenODB.cmake  dbGenSqlDDL.cmake  dbGenTS.cmake  dbGenZod.cmake  dbGenerationCommon.cmake  dbSchemaCheck.cmake
cmake/cppbessot/: CppBeSSOT.cmake  README.md  dbGenCpp.cmake  dbGenMigrations.cmake  dbGenODB.cmake  dbGenSqlDDL.cmake  dbGenerationCommon.cmake  dbSchemaCheck.cmake
cmake/cppbessot/scripts/: check_schema_changes.cmake  run_odb_migrations.cmake  run_odb_sql_ddl.cmake
cmake/scripts/: cppbessotDbActionBackfill.cmake  cppbessotDbActionClone.cmake  cppbessotDbActionCommon.cmake  cppbessotDbActionSqlApply.cmake  cppbessotDbActionTargetResolution.cmake  prepend_cppbessot_notice.cmake  run_db_createfrom.cmake  run_db_migrate.cmake  run_odb_logic.cmake
db/test-schema-v1.1/generated-cpp-source/include/cppbessot/model/: Agent.h  GovernmentAddress.h  TripAttemptResult.h
db/test-schema-v1.1/generated-cpp-source/src/model/: TripAttemptResult.cpp
db/test-schema-v1.1/generated-odb-source/postgre/: Agent-odb.cxx  Agent-odb.hxx  Agent.xml  GovernmentAddress.xml  TripAttemptResult.xml
db/test-schema-v1.1/generated-odb-source/sqlite/: Agent-odb.cxx  Agent.xml  GovernmentAddress.xml  TripAttemptResult.xml
db/test-schema-v1.1/generated-sql-ddl/postgre/: Agent-odb.ixx  Agent.sql  GovernmentAddress.sql  TripAttemptResult-odb.hxx  TripAttemptResult.sql
db/test-schema-v1.1/generated-sql-ddl/sqlite/: Agent-odb.hxx  Agent.sql  GovernmentAddress.sql  TripAttemptResult.sql
db/test-schema-v1.1/openapi/: openapi.yaml
db/test-schema-v1.2/generated-cpp-source/include/cppbessot/model/: Agent.h  GovernmentAddress.h  TripAttemptResult.h
db/test-schema-v1.2/generated-cpp-source/src/model/: Agent.cpp  GovernmentAddress.cpp
db/test-schema-v1.2/generated-odb-source/postgre/: Agent-odb.hxx  Agent.xml  GovernmentAddress-odb.cxx  GovernmentAddress-odb.hxx  GovernmentAddress-odb.ixx  GovernmentAddress.xml  TripAttemptResult.xml
db/test-schema-v1.2/generated-odb-source/sqlite/: Agent-odb.cxx  Agent-odb.hxx  Agent-odb.ixx  Agent.xml  GovernmentAddress-odb.cxx  GovernmentAddress.xml  TripAttemptResult-odb.cxx  TripAttemptResult-odb.hxx  TripAttemptResult-odb.ixx  TripAttemptResult.xml
db/test-schema-v1.2/generated-sql-ddl/postgre/: Agent-002-pre.sql  Agent-odb.cxx  Agent.sql  GovernmentAddress-002-pre.sql  GovernmentAddress.sql  TripAttemptResult-002-pre.sql  TripAttemptResult-odb.cxx  TripAttemptResult-odb.ixx  TripAttemptResult.sql
db/test-schema-v1.2/generated-sql-ddl/sqlite/: Agent-002-pre.sql  Agent.sql  GovernmentAddress-002-post.sql  GovernmentAddress-002-pre.sql  GovernmentAddress-odb.hxx  GovernmentAddress-odb.ixx  GovernmentAddress.sql  TripAttemptResult-002-pre.sql  TripAttemptResult.sql
db/test-schema-v1.2/generated-ts-types/: runtime.ts
db/test-schema-v1.2/generated-ts-types/.openapi-generator/: FILES
db/test-schema-v1.2/generated-ts-types/docs/: Agent.md  GovernmentAddress.md  TripAttemptResult.md
db/test-schema-v1.2/generated-ts-types/models/: Agent.ts  GovernmentAddress.ts  TripAttemptResult.ts  index.ts
db/test-schema-v1.2/generated-zod/: schemas.ts
db/test-schema-v1.2/openapi/: openapi.yaml
docs/prompts/: add-migration-cmds-prod-proddev-dev.md  add-tests-db-action-target.md  lib-split-abort-no-oas.md
openapi/templates/cpp-odb-json/: config.yaml  model-header.mustache  model-source.mustache
tests/: CMakeLists.txt
tests/cpp-serdes/: CMakeLists.txt  government_address_roundtrip_test.cpp  test_helpers.h  trip_attempt_result_roundtrip_test.cpp
tests/db-actions/: CMakeLists.txt
tests/db-actions/cmake/: TestCommon.cmake
tests/db-actions/scripts/: ambiguous_mapping.cmake  backfill_env_no_structural.cmake  invalid_target.cmake  missing_mapping.cmake  missing_migrate_with.cmake  missing_migration_dir.cmake  pgsql_backfill_real.cmake  pgsql_createfrom_mock.cmake  pgsql_createfrom_real.cmake  pgsql_migrate_order.cmake  pgsql_migrate_real.cmake  pgsql_proddev_clone_real.cmake  pgsql_proddev_stale_real.cmake  pgsql_stale_abort.cmake  pgsql_tests_createfrom_mock.cmake  proddev_createfrom_illegal.cmake  regression_targets.cmake  sqlite_createfrom.cmake  sqlite_invalid_sql.cmake  sqlite_migrate.cmake  sqlite_proddev_clone.cmake  sqlite_proddev_stale.cmake  sqlite_tests_createfrom.cmake
tests/odb-orm/: CMakeLists.txt  orm_test_common.h  pgsql_orm_test.cpp  sqlite_orm_test.cpp
